--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <article>
       <h2>makeup second</h2>
       <img src="images/makeup.png" alt="">
-      <button>Shop makeup</button>
+      <button><a>Shop makeup</a></button>
     </article>
     <article>
       <h2>our fragrances</h2>  
@@ -48,14 +48,11 @@
       <video controls>
         <source controls src="images/video.mp4">
       </video>
-      
-   
-     
     </article>
 
     <article>
       <h2>featured products</h2>
-      <button>shop all products</button>
+    <button>shop all products</button>
       <img src="images/tas.png" alt="">
       <h3>duffle bag</h3>
       <p>permanent collection</p>
