--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
     <article>
       <h2>skin first</h2>
       <img src="images/skincare.png" alt="">
-      <button><a href=index2.html>shop skincare</a></button>
+     <a href=index2.html>Shop skincare</a>
     </article>
     <article>
       <h2>makeup second</h2>
       <img src="images/makeup.png" alt="">
-      <button><a>Shop makeup</a></button>
+      <a>Shop makeup</a>
     </article>
     <article>
       <h2>our fragrances</h2>  
-      <q>Your favorite scents that will grow with you no matter where you are in your personal evolution.</q>
-        <button>Shop fragrance</button>
+      <p>Your favorite scents that will grow with you no matter where you are in your personal evolution.</p>
+        <a>Shop fragrance</a>
       <video controls>
         <source controls src="images/video.mp4">
       </video>
@@ -52,12 +52,12 @@
 
     <article>
       <h2>featured products</h2>
-    <button>shop all products</button>
+    <a>Shop all products</a>
       <img src="images/tas.png" alt="">
       <h3>duffle bag</h3>
       <p>permanent collection</p>
       <p>55$</p>
-      <button>add to bag</button>
+      <a>add to bag</a>
     </article>
 
     <article>
@@ -65,11 +65,19 @@
       <img src="images/plaatje.png" alt="">
       <h3>Shelby with the duffle bag and water bottle </h3>
     </article>
+    <article>
+    <img src="images/concealer.png" alt="">
+      <h3>Shelby with the duffle bag and water bottle </h3>
+    </article>
+    <article>
+    <img src="images/petten.png" alt="">
+      <h3>Shelby with the duffle bag and water bottle </h3>
+    </article>
   </main>
   <footer>
     <p>At Glossier, we make products inspired by real life. We believe beauty is about having fun, celebrating freedom
       and being present, because no matter where you are in your beauty journey - YOU LOOK GOOD.</p>
-    <label for="email">Enter your email:</label>
+    <label for="email">Your email:</label>
     <input type="email" id="email" name="email">
     <input type="submit">
     <p>This field is required</p>
@@ -92,15 +100,7 @@
       <li>
         <p>Terms of Use</p>
       </li>
-      <li>
-        <p>Accessibility</p>
-      </li>
-      <li>
-        <p>Subbly Chain Transparency</p>
-      </li>
-      <li>
-        <p>Your Privacy Choices</p>
-      </li>
+      
     </ul>
     <img src="images/smile_wave_black.png" alt="">
   </footer>
