--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<main>
+  <header>
+    <p>Free shipping on orders over 40$</p>
+  </header>
     <nav>
       <a href=index.html> <img src="images/glossierlogo.png" alt="Glossier Logo"></a>
         <ul>
@@ -29,7 +33,13 @@
             <p>55$</p>
             <button>add to bag</button>
           </article>
-
+          <article>
+            <img src="images/deo.png" alt="">
+            <h3>Futuredew</h3>
+            <p>Oil serum hybrid</p>
+            <p>55$</p>
+            <button>add to bag</button>
+          </article>
 
 
 
@@ -39,7 +49,7 @@
       <footer>
         <p>At Glossier, we make products inspired by real life. We believe beauty is about having fun, celebrating freedom
           and being present, because no matter where you are in your beauty journey - YOU LOOK GOOD.</p>
-        <label for="email">Enter your email:</label>
+        <label for="email">Your email:</label>
         <input type="email" id="email" name="email">
         <input type="submit">
         <p>This field is required</p>
@@ -50,8 +60,9 @@
         <h4>country</h4>
         <h4>social</h4>
         <h4>index</h4>
-        <p>© 2023 Glossier. All rights reserved.</p>
+        
         <ul>
+         <li><p>© 2023 Glossier. All rights reserved.</p></li>
           <li>
             <p>Privacy Police</p>
           </li>
@@ -61,17 +72,9 @@
           <li>
             <p>Terms of Use</p>
           </li>
-          <li>
-            <p>Accessibility</p>
-          </li>
-          <li>
-            <p>Subbly Chain Transparency</p>
-          </li>
-          <li>
-            <p>Your Privacy Choices</p>
-          </li>
+          
         </ul>
-        <img scr="" alt="">
+        <img src="images/smile_wave_black.png" alt="">
       </footer>
 </body>
 </html>
