--- a/index.html
+++ b/index.html
@@ -5,74 +5,86 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Glossier</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
+  <link rel="stylesheet" href="styles.css"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
 <body>
   <header>
     <p>Free shipping on orders over 40$</p>
   </header>
   <nav>
-   <a href=index.html> <img src="images/glossierlogo.png" alt="Glossier Logo"></a>
+    <a href=index.html> <img src="images/glossierlogo.png" alt="Glossier Logo"></a>
     <ul>
-      <li>
-        <p>menu</p>
-      </li>
       <li>
         <p>search</p>
       </li>
       <li>
         <p>bag(0)</p>
       </li>
-    </ul>
+      <li>
+        <ul class="menu">
+          <li><a class="menuItem" href="#">Shop All</a></li>
+          <li><a class="menuItem" href="#">New</a></li>
+          <li><a class="menuItem" href="#">Stores</a></li>
+          <li><a class="menuItem" href="#">Log in</a></li>
+        </ul>
+      </li>
   </nav>
+  </ul>
+  <button class="hamburger">
+    <i class="menuIcon material-icons">menu</i>
+    <i class="closeIcon material-icons">close</i>
+  </button>
   <main>
     <section>
-      <img src="images/hoofdpagina1.png" alt="hoofdpagina1">
+      <img src="images/hoofdpagina1.png" alt="achtergrond foto">
       <h1>Glossier.</h1>
     </section>
     <article>
       <h2>skin first</h2>
-      <img src="images/skincare.png" alt="">
-     <a href=index2.html>Shop skincare</a>
+      <img src="images/skincare.png" alt="skincare achtergrond">
+      <span><a href=index2.html>Shop skincare</a></span>
     </article>
     <article>
       <h2>makeup second</h2>
-      <img src="images/makeup.png" alt="">
-      <a>Shop makeup</a>
+      <img src="images/makeup.png" alt="makeup achgtergrond">
+      <span><a>Shop makeup</a></span>
     </article>
     <article>
-      <h2>our fragrances</h2>  
+
+      <h2>our fragrances</h2>
       <p>Your favorite scents that will grow with you no matter where you are in your personal evolution.</p>
-        <a>Shop fragrance</a>
+      <a>Shop fragrance</a>
       <video controls>
         <source controls src="images/video.mp4">
       </video>
     </article>
 
+    <h2>featured products</h2>
     <article>
-      <h2>featured products</h2>
-    <a>Shop all products</a>
-      <img src="images/tas.png" alt="">
-      <h3>duffle bag</h3>
-      <p>permanent collection</p>
+      <a>Shop all products</a>
+      <img src="images/tas.png" alt="duffle bag">
+      <h3>Duffle Bag</h3>
+      <p>Meet your new go-to gym bag, long-weekend satchel, carry-everything, chic-and-sporty duffle. It comes equipped
+        with a single main compartment, two interior pockets, a side pocket, and an adjustable, detachable shoulder
+        strap. A desert rose colorway, with a sand-colored bag, peach straps and burgundy Glossier logo.</p>
       <p>55$</p>
-      <a>add to bag</a>
+      <a>add to bag
+      </a>
     </article>
 
-    <article>
+
+    <figure>
       <h2>get the look</h2>
-      <img src="images/plaatje.png" alt="">
-      <h3>Shelby with the duffle bag and water bottle </h3>
-    </article>
-    <article>
-    <img src="images/concealer.png" alt="">
-      <h3>Shelby with the duffle bag and water bottle </h3>
-    </article>
-    <article>
-    <img src="images/petten.png" alt="">
-      <h3>Shelby with the duffle bag and water bottle </h3>
-    </article>
+      <img src="images/plaatje.png" alt="meisjes met de duffle bag ">
+      <img src="images/petten.png" alt="twee meisjes met petten">
+      <img src="images/concealer.png" alt="meisje met de glossier concealer">
+      <img src="images/parfum.png" alt="glossier parfum op bureau">
+      <img src="images/pet.png" alt="glossier producten met glossier pet">
+
+    </figure>
+
+
   </main>
   <footer>
     <p>At Glossier, we make products inspired by real life. We believe beauty is about having fun, celebrating freedom
@@ -88,9 +100,11 @@
     <h4>country</h4>
     <h4>social</h4>
     <h4>index</h4>
-    
+
     <ul>
-     <li><p>© 2023 Glossier. All rights reserved.</p></li>
+      <li>
+        <p>© 2023 Glossier. All rights reserved.</p>
+      </li>
       <li>
         <p>Privacy Police</p>
       </li>
@@ -100,10 +114,11 @@
       <li>
         <p>Terms of Use</p>
       </li>
-      
+
     </ul>
-    <img src="images/smile_wave_black.png" alt="">
+    <img src="images/smile_wave_black.png" alt="emoji met smiley en handje">
   </footer>
+  <script src="js.js"></script>
 </body>
 
 </html>
